<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.franktan.popularmovies.ui.fragments.MovieDetailFragment">

    <RelativeLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:id="@+id/movie_trailer"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/movie_trailer_text"/>

    <ImageView
        android:layout_width="123dp"
        android:layout_height="184dp"
        android:id="@+id/movie_poster"
        android:layout_below="@id/movie_trailer"
        android:layout_marginTop="-20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/movie_poster_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/movie_title"
        android:id="@+id/movie_title"
        android:layout_centerVertical="true"
        android:layout_below="@id/movie_trailer"
        android:layout_toRightOf="@id/movie_poster"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating_section"
        android:orientation="horizontal"
        android:layout_toRightOf="@id/movie_poster"
        android:layout_below="@id/movie_title"
        android:gravity="center_vertical">

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/rate_indicator"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="3dp"
        android:src="@drawable/ic_star_black_18dp"
        android:contentDescription="@string/rating" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rating_example"
        android:id="@+id/rating_text"
        android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/count_section"
        android:orientation="horizontal"
        android:layout_toRightOf="@id/movie_poster"
        android:layout_below="@id/rating_section"
        android:gravity="center_vertical">

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/count_indicator"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="3dp"
        android:src="@drawable/ic_supervisor_account_black_18dp"
        android:contentDescription="@string/vote_count" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/vote_count_example"
        android:id="@+id/vote_count"
        android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_section"
        android:orientation="horizontal"
        android:layout_toRightOf="@id/movie_poster"
        android:layout_below="@id/count_section"
        android:gravity="center_vertical">

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/date_indicator"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="3dp"
        android:src="@drawable/ic_event_black_18dp"
        android:contentDescription="@string/release_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date_example"
        android:id="@+id/release_date"
        android:layout_centerVertical="true"
        android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language_section"
        android:orientation="horizontal"
        android:layout_toRightOf="@id/movie_poster"
        android:layout_below="@id/date_section"
        android:gravity="center_vertical">

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/language_indicator"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="3dp"
        android:src="@drawable/ic_language_black_18dp"
        android:contentDescription="@string/original_language" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_language_example"
        android:id="@+id/original_language"
        android:gravity="center" />

    </LinearLayout>

    <View style="@style/Divider"
        android:id="@+id/divider1"
        android:layout_below="@id/movie_poster"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/trailer_section"
        android:layout_below="@id/divider1"></LinearLayout>

    <View style="@style/Divider"
        android:id="@+id/divider2"
        android:layout_below="@id/trailer_section"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/overview_title"
        android:id="@+id/overview_title"
        android:layout_centerVertical="true"
        android:layout_below="@id/divider2"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/overview_example"
        android:id="@+id/overview"
        android:layout_below="@id/overview_title"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <View style="@style/Divider"
        android:id="@+id/divider3"
        android:layout_below="@id/overview"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/review_section"
        android:layout_below="@id/divider3"></LinearLayout>

    </RelativeLayout>
</ScrollView>

