<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/sort_order_key"
        android:title="@string/sort_order_label"
        android:summary="@string/sort_order_summary"
        android:defaultValue="@string/sort_by_popularity"
        android:entries="@array/sort_order_array"
        android:entryValues="@array/sort_order_array"/>

    <!--<CheckBoxPreference-->
        <!--android:key="example_checkbox"-->
        <!--android:title="@string/pref_title_social_recommendations"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:defaultValue="true" />-->

    <!--&lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<EditTextPreference-->
        <!--android:key="example_text"-->
        <!--android:title="@string/pref_title_display_name"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:inputType="textCapWords"-->
        <!--android:capitalize="words"-->
        <!--android:singleLine="true"-->
        <!--android:maxLines="1" />-->

    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
         <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
        <!--android:key="example_list"-->
        <!--android:title="@string/pref_title_add_friends_to_messages"-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null" />-->

</PreferenceScreen>
